force-app/main/default/objects/SurveyInvitation/SurveyInvitation.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>