force-app/main/default/objects/SurveyInvitation/fields/Consent__c.field-meta.xml
<CustomField>
    <fullName>Consent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consent</label>
    <referenceTo>Consent__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>