force-app/main/default/objects/SurveyInvitation/fields/Flow_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Flow_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flow Expiration Date</label>
    <type>DateTime</type>
</CustomField>