force-app/main/default/objects/SurveyInvitation/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>