force-app/main/default/objects/SurveyInvitation/fields/SSP_Notifications__c.field-meta.xml
<CustomField>
    <fullName>SSP_Notifications__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SSP Notifications</label>
    <referenceTo>SSP_Notifications__c</referenceTo>
    <relationshipLabel>Survey Invitations</relationshipLabel>
    <relationshipName>Survey_Invitations</relationshipName>
    <type>Lookup</type>
</CustomField>